# mish

./: Makefile  README.md  main.c  meson.build
